@@ -1,3 +1,8 @@
+TAG: pdfdownload-6-0-23-4
+DATE: 03/13/2024
+STAFF: sc
+WTS2-1428/FL2-776 - elsevier error when month is 'Summer' or 'Spring'
+
 TAG: pdfdownload-6-0-23-3
 DATE: 02/29/2024
 STAFF: lec
